--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,49 @@
                <h1>Портфолио работ</h1>
                <ul>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/laptop-screen.jpg" alt="Фотографии сотрудников крмпании на экране ноутбука." width="370">
 
                         <h2>Технокряк</h2>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/basketball-players.jpg" alt="Два парня играют в баскетболл." width="370">
                         <h2>Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/seafood-label.jpg" alt="Лэйбл ресторана Seafood. " width="370">
                         <h2>Ресторан Seafood</h2>
-                        <p>Приложение</p>
+                        <p>Приложение</p> 
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/headphones.jpg" alt=" Черные наушники." width="370">
                         <h2>Проект Prime</h2>
                         <p>Маркетинг</p>
                     </li>
                     
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/boxes.jpg" alt="Две маленькие коробки." width="370">
                         <h2>Проект Boxes</h2>
                         <p>Приложение</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/computer-screen.jpg" alt="Монитор компьютера." width="370">
                         <h2>Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/openmagazine.jpg" alt="Развернутый журнал." width="370">
                         <h2>Издание Limited Edition</h2>
                         <p>Дизайн</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/paper-label.jpg" alt="Бумажный лэйбл." width="370">
                         <h2>Проект LAB</h2>
                         <p>Маркетинг</p>
                     </li>
                     <li>
-                        <img src="" alt="" width="">
+                        <img src="./images/keyboarding.jpg" alt="Мужчина печатает на ноутбуке." width="370">
                         <h2>Growing Business</h2>
                         <p>Приложение</p>
                     </li>
