--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <!--Навигация на другие страницы -->
             
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="./index.html">Студия</a></li>
+                <li><a href="./portfolio.html">Портфолио</a></li>
                 <li> <a href="">Контакты</a></li>
             
             </ul>
