--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,8 @@
  <!--Уникальный контент страницы-->
 <main>
  <!--Фильтр секции-->
-<section class="page-filter">
-  <ul class="list">
+<section>
+  <ul class=" page-filter list">
     <li> <button type="button" class="filter-button">Все</button></li>
     <li><button type="button" class="filter-button">Веб-сайты</button></li>
     <li><button type="button" class="filter-button">Приложения</button></li>
