--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,15 @@
 <body>
     <!--Шапка страницы-->
 
-<header>
-<nav>
+<header class="header">
+<nav class="navigation">
+
  <a href="" class="logo-link"><span class="logo-web">Web</span>Studio</a>
 <!--Навигация на другие страницы -->
 
     <ul class="site-nav list">
         <li><a href="./index.html" class="site-nav link">Студия</a></li>
-        <li><a href="./portfolio.html" class="site-nav link">Портфолио</a></li>
+        <li><a href="./portfolio.html" class="site-nav link current">Портфолио</a></li>
         <li> <a href="" class="site-nav link">Контакты</a></li>
 
     </ul>
