Оптимизирует и корректирует стили

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 <header class="header">
 <nav class="navigation">
 
- <a href="" class="logo-link"><span class="logo-web">Web</span>Studio</a>
+ <a href="" class="header-logo-link"><span class="logo-web">Web</span>Studio</a>
 <!--Навигация на другие страницы -->
 
     <ul class="site-nav list">
@@ -36,7 +36,7 @@
     </ul>
 </header>
  <!--Уникальный контент страницы-->
-<main>
+<main class="main">
  <!--Фильтр секции-->
 <section>
   <ul class=" page-filter list">
