--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="header">
             <nav class="navigation">
 
-            <a href="" class="logo-link"><span class="logo-web">Web</span>Studio</a>
+            <a href="" class="header-logo-link"><span class="logo-web">Web</span>Studio</a>
 <!--Навигация на другие страницы -->
             
             <ul class="site-nav list">
@@ -38,7 +38,7 @@
 
     <main>
         <section class="hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1  class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button"class="hero-button">Заказать услугу</button>
         </section>
     
