--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <!--Шапка страницы-->
     
-        <header class="header">
-            <nav class="navigation">
+        <header>
+ <nav>
 
             <a href="" class="header-logo-link"><span class="logo-web">Web</span>Studio</a>
 <!--Навигация на другие страницы -->
@@ -25,8 +25,9 @@
             <ul class="site-nav list">
                 <li><a href="./index.html" class="site-nav link current">Студия</a></li>
                 <li><a href="./portfolio.html" class="site-nav link">Портфолио</a></li>
-                <li> <a href="" class="site-nav link">Контакты</a></li>
-        </nav>     
+                <li> <a href="" class="site-nav link">Контакты</a></li>    
+             </ul>
+  </nav>
 
 <ul class="contact-info list">
     <li><a href="mailto:info@devstudio.com" class="contact-info-item">info@devstudio.com</a></li>
@@ -39,7 +40,7 @@
     <main>
         <section class="hero">
             <h1  class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button"class="hero-button">Заказать услугу</button>
+            <button type="button" class="hero-button">Заказать услугу</button>
         </section>
     
     <!--Преимущества нашей студии.Секция имеет  заголовок,который будет в дальнейшем скрыт и не будет отображаться на странице-->
